syntax = "proto3";
package api;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "pkg/api/user.proto";

option go_package = "github.com/chestnut42/terraforming-mars-manager/pkg/api";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  responses: {
    key: "401"
    value: {
      description: "You have provided no authorization token or the token provided is invalid."
    }
  }
  security_definitions: {
    security: {
      key: "Bearer"
      value: {
        type: TYPE_API_KEY
        name: "Authorization"
        in: IN_HEADER,
        description: "Enter the token with the `Bearer: ` prefix, e.g. ""Bearer abcde12345""."
      }
    }
  }
};



service Users {
  rpc Login(Login.Request) returns (Login.Response) {
    option (google.api.http) = {
      post: "/manager/api/v1/login"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement { key: "Bearer" }}
    };
  }

  rpc GetMe(GetMe.Request) returns (GetMe.Response) {
    option (google.api.http) = {
      get: "/manager/api/v1/me"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement { key: "Bearer" }}
    };
  }
  rpc UpdateMe(UpdateMe.Request) returns (UpdateMe.Response) {
    option (google.api.http) = {
      post: "/manager/api/v1/me"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement { key: "Bearer" }}
    };
  }

  rpc UpdateDeviceToken(UpdateDeviceToken.Request) returns (UpdateDeviceToken.Response) {
    option (google.api.http) = {
      post: "/manager/api/v1/me/device-token"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement { key: "Bearer" }}
    };
  }

  rpc SearchUser(SearchUser.Request) returns (SearchUser.Response) {
    option (google.api.http) = {
      post: "/manager/api/v1/search"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement { key: "Bearer" }}
    };
  }

  rpc GetEloLeaderboard(GetEloLeaderboard.Request) returns (GetEloLeaderboard.Response) {
    option (google.api.http) = {
      get: "/manager/api/v1/leaderboard"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement { key: "Bearer" }}
    };
  }
}



message Login {
  message Request {}

  message Response {
    User user = 1;
  }
}

message GetMe {
  message Request {}

  message Response {
    User user = 1;
  }
}

message UpdateMe {
  message Request {
    string nickname = 1;
    PlayerColor color = 2;
  }

  message Response {
    User user = 1;
  }
}

message UpdateDeviceToken {
  message Request {
    bytes device_token = 1;
  }

  message Response {}
}

message SearchUser {
  message Request {
    string search = 1;
  }

  message Response {
    repeated User users = 1;
  }
}

message GetEloLeaderboard {
  message Request {}

  message Response {
    repeated User users = 1;
  }
}




service Games {
  rpc CreateGame(CreateGame.Request) returns (CreateGame.Response) {
    option (google.api.http) = {
      post: "/manager/api/v1/game"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement { key: "Bearer" }}
    };
  }
  rpc CreateGameV2(CreateGameV2.Request) returns (CreateGameV2.Response) {
    option (google.api.http) = {
      post: "/manager/api/v2/game"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement { key: "Bearer" }}
    };
  }

  rpc GetGames(GetGames.Request) returns (GetGames.Response) {
    option (google.api.http) = {
      get: "/manager/api/v1/me/games"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { security_requirement { key: "Bearer" }}
    };
  }
}



message CreateGame {
  message Request {
    repeated string players = 1;
  }

  message Response {}
}

message CreateGameV2 {
  enum Board {
    RANDOM = 0;
    THARSIS = 1;
    HELLAS = 2;
    ELYSIUM = 3;
  }

  message Request {
    repeated string players = 1;
    Board board = 2;
    bool corporate_era = 3;
    bool prelude = 4;
    bool venus_next = 5;
    bool solar_phase = 6;
    bool colonies = 7;
  }

  message Response {}
}

message GetGames {
  message Request {}

  message Response {
    repeated Game games = 1;
  }
}
